// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`tab > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__qxhx0o4"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j"
        />
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with counter, badge and subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__qxhx0o4"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j"
        >
          <span
            class="styles__qxhx0o5 styles__11h3ve90 styles_prominence_default__11h3ve92 styles_sentiment_neutral__11h3ve97 styles_size_medium__11h3ve9e styles_undefined_compound_6__11h3ve9n style__1do42ls0 style_prominence_default__1do42ls4 style_variant_caption__1do42lsp style_undefined_compound_0__1do42ls1a"
            style="--whiteSpace__1giziax1: nowrap;"
          >
            1
          </span>
          <span
            class="styles__qxhx0o3"
          >
            badge
          </span>
        </div>
        <div
          class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
        >
          <span
            class="styles_default__qxhx0o6 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            subtitle
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;

exports[`tab > renders correctly with subtitle 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <button
      aria-disabled="false"
      aria-selected="false"
      class="styles__qxhx0o4"
      data-is-selected="false"
      role="tab"
      type="button"
    >
      <div
        class="styles__xf61n40 styles_flexDirection_column_xxsmall__xf61n42d styles_gap_0.25rem_xxsmall__xf61n45j"
      >
        <div
          class="styles__xf61n40 styles_alignItems_center_xxsmall__xf61n4d styles_flexDirection_row_xxsmall__xf61n42j"
        />
        <div
          class="styles__xf61n40 styles_flexDirection_row_xxsmall__xf61n42j"
        >
          <span
            class="styles_default__qxhx0o6 style__1do42ls0 style_prominence_weak__1do42ls7 style_sentiment_neutral__1do42lsb style_variant_bodySmall__1do42lsk style_undefined_compound_3__1do42ls1d style_undefined_compound_67__1do42ls35"
          >
            test
          </span>
        </div>
      </div>
    </button>
  </div>
</DocumentFragment>
`;
